@@ -51,6 +51,8 @@ public class ItemLevelNearestEntity extends Item {
 
                             player.getHeldItem(hand).shrink(1);
 
+                            data.trySync(en);
+
                             return new ActionResult<ItemStack>(ActionResultType.PASS, player
                                     .getHeldItem(hand));
                         } else {
