@@ -1,8 +1,9 @@
 2.6.3
+updated to latest forge v100 
 made chaos orbs not activate instability break chance
 made all base player stats (by config) scale normally again
-made mob leveling in maps much slower over distance, so it's harder to cheat map lvls
 reduced flat hp of some affixes and runewords
+fixed items that increase mob rarity and lvl to actually update client side
 2.6.2 
 fixed armor not getting damaged.
 2.6.1
